--- a/app/src/main/res/layout/placeholder_row_layout.xml
+++ b/app/src/main/res/layout/placeholder_row_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/image_view"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="65dp"
         android:layout_marginTop="12dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintEnd_toEndOf="@+id/title_view"
         app:layout_constraintStart_toStartOf="@+id/title_view"
         app:layout_constraintTop_toBottomOf="@+id/title_view" />
@@ -43,7 +43,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintStart_toStartOf="@+id/description_view"
         app:layout_constraintTop_toBottomOf="@+id/description_view"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -54,7 +54,7 @@
         android:layout_height="36dp"
         android:layout_marginBottom="12dp"
         android:layout_marginStart="24dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintStart_toEndOf="@+id/like_view"
         app:layout_constraintTop_toTopOf="@+id/like_view"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -65,7 +65,7 @@
         android:layout_height="36dp"
         android:layout_marginBottom="12dp"
         android:layout_marginStart="24dp"
-        android:background="@color/mediumGray"
+        android:background="@color/placeholderColor"
         app:layout_constraintStart_toEndOf="@+id/clock_view"
         app:layout_constraintTop_toTopOf="@+id/clock_view"
         app:layout_constraintBottom_toBottomOf="parent" />
