--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -96,13 +96,13 @@
 
                 <TextView
                     android:id="@+id/favorite_likes_textView"
-                    setNumberOfLikes="@{favoritesEntity.result.aggregateLikes}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number"
+                    android:text="@{String.valueOf(favoritesEntity.result.aggregateLikes)}"
                     android:textColor="@color/red"
                     app:layout_constraintStart_toStartOf="@+id/favorite_description_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/favorite_likes_imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_likes_imageView"
+                    tools:text="@string/number"/>
 
                 <ImageView
                     android:id="@+id/favorite_clock_imageView"
@@ -121,14 +121,14 @@
 
                 <TextView
                     android:id="@+id/favorite_clock_textView"
-                    setNumberOfMinutes="@{favoritesEntity.result.readyInMinutes}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:text="@string/number"
+                    android:text="@{String.valueOf(favoritesEntity.result.readyInMinutes)}"
                     android:textColor="@color/yellow"
                     app:layout_constraintStart_toEndOf="@id/favorite_likes_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/favorite_clock_imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_clock_imageView"
+                    tools:text="@string/number"/>
 
                 <ImageView
                     android:id="@+id/favorite_vegan_imageView"
