--- a/app/src/main/res/layout/recipes_row_layout.xml
+++ b/app/src/main/res/layout/recipes_row_layout.xml
@@ -97,13 +97,13 @@
 
                 <TextView
                     android:id="@+id/likes_textView"
-                    setNumberOfLikes="@{result.aggregateLikes}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number"
+                    android:text="@{String.valueOf(result.aggregateLikes)}"
                     android:textColor="@color/red"
                     app:layout_constraintStart_toStartOf="@+id/description_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/likes_imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/likes_imageView"
+                    tools:text="@string/number"/>
 
                 <ImageView
                     android:id="@+id/clock_imageView"
@@ -122,14 +122,14 @@
 
                 <TextView
                     android:id="@+id/clock_textView"
-                    setNumberOfMinutes="@{result.readyInMinutes}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:text="@string/number"
+                    android:text="@{String.valueOf(result.readyInMinutes)}"
                     android:textColor="@color/yellow"
                     app:layout_constraintStart_toEndOf="@id/likes_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/clock_imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/clock_imageView"
+                    tools:text="@string/number"/>
 
                 <ImageView
                     android:id="@+id/vegan_imageView"
